# ibvs_capstone

./: .gitignore  .gitmodules  DemoDirections.txt  README.md
apriltags2_ros/apriltags2_ros/: CMakeLists.txt
apriltags2_ros/apriltags2_ros/config/: tags.yaml
apriltags2_ros/apriltags2_ros/launch/: continuous_detection.launch  turtlebot_detection.launch
cap_integration/: CMakeLists.txt  package.xml
cap_integration/launch/: real_setup.launch  state_machines.launch
cap_integration/scripts/: state_machines.py
darknet_ros/darknet_ros/config/: ros.yaml  yolo3-6.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
ibvs_perception/: CMakeLists.txt  README.md  package.xml  setup.sh
ibvs_perception/cfg/: GPDws.cfg
ibvs_perception/launch/: ibvs_object_detection.launch  kinect2.launch  real_setup.launch  realsense.launch  rqt.launch  rs_gpd.launch  ws_config.launch
ibvs_perception/msg/: YoloObjectList.msg
ibvs_perception/scripts/: bestGrip.py  best_grip.py  publishCubeKinect.py  publishCubeRealSense.py  publishYoloKinect.py  rect_test.py  utils.py  yolo_bounder.py
pbvs_capstone/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  README.md  package.xml
perception/launch/: kinect2.launch  realsense.launch
perception/msg/: YoloObject.msg  YoloObjectList.msg
perception/scripts/: bestGrip.py  publishCubeKinect.py  publishCubeRealSense.py  publishYoloKinect.py  publishYoloRealsense.py
training/: README.md  detect.py
training/darknet/: test.txt  train.txt
training/darknet/cfg/: obj.data  obj.names  obj_bunny_plushie-py_main.data  obj_v5.data  (+11 more)
(+7 files in other folders)
